--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
         <title>Connect4</title>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
         <script src="app/components/board/boardController.js"></script>
+        <script src="app/components/board/boardDirective.js"></script>
     </head>
 
     <body>
         
             <div ng-app='boardApp'  ng-controller='boardCtrl as board'>
-                <div>"Board data: " + {{board.tableData[0][0]}}</div>
+                <board-directive></board-directive>
                 <div ng-click='board.test()'>Click me!</div>
             </div>
             
