--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
         <script src="app/components/board/boardController.js"></script>
         <script src="app/components/board/boardDirective.js"></script>
+
+        <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     </head>
 
     <body>
