Changed directory structure

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Connect4</title>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+        <script src="app/app.module.js"></script>
         <script src="app/components/board/boardController.js"></script>
         <script src="app/components/board/boardDirective.js"></script>
         <script src="app/components/board/boardFactory.js"></script>
@@ -13,7 +14,6 @@
 
             <div ng-app='boardApp'  ng-controller='boardCtrl as board'>
                 <board-directive></board-directive>
-                <div ng-click='board.test()'>Click me!</div>
             </div>
 
     </body>
