New Game Feature Added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
             <div ng-app='boardApp'  ng-controller='boardCtrl as board'>
                 <board-directive></board-directive>
+                <input type='button' ng-click='board.newGame()' value='New Game'></input>
             </div>
+
 
     </body>
 
